--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body{
     background: linear-gradient(#4d7c81,#9d9ea3,#036970);
     text-align: center;
     font-family: 'Kanit', sans-serif;
-    text-shadow: 1px 2px 15px rgb(219, 217, 217);
     position: fixed;
+    animation: shadow 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: inherit;
 }
 .description{
     position: relative;
@@ -169,4 +171,23 @@ li, ul{
         border:solid 2px #fcd29c;
         padding-left: 3%;
     }    
+}
+
+
+@keyframes shadow{
+    0%{
+        text-shadow: 0px 0px 0px rgb(219, 217, 217);
+    }
+    25%{
+        text-shadow: 1px 2px 15px rgb(219, 217, 217);
+    }
+    50%{
+        text-shadow: 1px 2px 15px rgb(246, 250, 1);
+    }
+    75%{
+        text-shadow: 1px 2px 15px rgb(219, 217, 217);
+    }
+    100%{
+        text-shadow: 0px 0px 0px rgb(219, 217, 217);
+    }
 }
